--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,7 @@
     "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "description": "Tool for Rutube editors and administrators",
     "icons": {
-        "128": "img/icon128.png",
-        "clean": "img/logo_clean.png"
+        "128": "img/icon128.png"
     },
     "manifest_version": 2,
     "minimum_chrome_version": "18",
